jnu_util.c compilation error on Solaris

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: core-libs
    • None
    • b04

      Declarations must precede assignments on C in Solaris.
      open/src/java.base/share/native/libjava/jni_util.c", line 807: error: declaration can not follow a statement (E_DECLARATION_IN_CODE)
      open/src/java.base/share/native/libjava/jni_util.c", line 822: error: declaration can not follow a statement (E_DECLARATION_IN_CODE)

            Assignee:
            Roger Riggs
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: