8198970: jnu_util.c compilation error on Solaris

Reviewed-by: mchung, redestad